--- a/style.css
+++ b/style.css
@@ -1,127 +1,101 @@
-body {
-    margin: 0;
-    padding: 0;
-    
+.body {
+  margin: 0;
+  padding: 0;
 }
 
-#container {
-    border: 2px solid red;
-    width: 550px;
-    height: 550px;
-    background: #1F2937;
-    margin: auto;
-
+.container-class {
+  border: 2px solid red;
+  width: 550px;
+  height: 550px;
+  background: #1f2937;
+  margin: auto;
 }
-#heading {
-    font-family: 'Karla', sans-serif;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 40px;
-    line-height: 40px;
-    width: 360px;
-    height: 80px;
-    color: #FFFFFF;
-    margin: 115px auto auto 52px;
-
+.title {
+  font-family: "Karla", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 40px;
+  width: 360px;
+  height: 80px;
+  color: #ffffff;
+  margin: 115px auto auto 52px;
 }
-span {
-  color: #4ADF86;  
+.special-text {
+  color: #4adf86;
 }
 
-#description {
-   font-family: 'Inter', sans-serif;
-   font-size: 20px;
-   line-height: 28px;
-   width: 372px;
-   height: 28px;
-   color: #D5D4D8;
-   margin: 10px auto auto 52px;
-
+.description {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  line-height: 28px;
+  width: 372px;
+  height: 28px;
+  color: #d5d4d8;
+  margin: 10px auto auto 52px;
 }
 
-button {
-    justify-content: center;
-    align-items: center;
-    padding: 9px 17px 9px 15px;
-    width: 191px;
-    height: 42px;
-    background: #10B981;
-    border-radius: 6px;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    color: #FFFFFF;
-    border: none;
-    margin: 51px auto auto 52px;
-    cursor: pointer;
-
+.button {
+  justify-content: center;
+  align-items: center;
+  padding: 9px 17px 9px 15px;
+  width: 191px;
+  height: 42px;
+  background: #10b981;
+  border-radius: 6px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  border: none;
+  margin: 51px auto auto 52px;
+  cursor: pointer;
 }
 
-#bottom-section {
-    display: flex;
-    gap: 24px;
-    margin: 35px 52px 115px 52px;
-    border-top: 1px solid #2F3E53;
-    padding-top: 35px;
-
+.bottom-section {
+  display: flex;
+  gap: 24px;
+  margin: 35px 52px 115px 52px;
+  border-top: 1px solid #2f3e53;
+  padding-top: 35px;
 }
 
-#password-one,
-#password-two {
-    width: 211px;
-    height: 39px;
-    background: #273549;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 32px;
-    text-align: center;
-    color: #55F991;
-
+.pswrd {
+  width: 211px;
+  height: 39px;
+  background: #273549;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 32px;
+  text-align: center;
+  color: #55f991;
 }
 
 @media screen and (max-width: 550px) {
+  #container {
+    width: auto;
+  }
 
-    #container {
-        width: auto;
-        
-    }
+  .bottom-section {
+    flex-direction: column;
+    align-items: center;
+    margin: 35px auto;
+  }
 
-    #bottom-section {
-        flex-direction: column;
-        align-items: center;
-        margin: 35px auto;
+  .title {
+    width: auto;
+    text-align: center;
+    margin: 115px auto 50px;
+    align-items: center;
+  }
 
-    }
-
-    #heading {
-        width: auto;
-        text-align: center;
-        margin: 115px auto 50px;
-        align-items: center;
-    }
-
-    #description {
-        width: auto;
-        text-align: center;
-        margin: 10px auto auto;
-    }
-
- 
-       
-        
-    }
-
-
-
-    
+  .description {
+    width: auto;
+    text-align: center;
+    margin: 10px auto auto;
+  }
 }
-
-
-
-
-
-
